include/plasma_d.h

int PLASMA_dgesv(int N, int NRHS, double *A, int LDA, int *IPIV, double *B, int LDB);
int PLASMA_dgesv_incpiv(int N, int NRHS, double *A, int LDA, PLASMA_desc *descL, int *IPIV, double *B, int LDB);
int PLASMA_dgesvd(PLASMA_enum jobu, PLASMA_enum jobvt, int M, int N, double *A, int LDA, double *S, PLASMA_desc *descT, double *U, int LDU, double *VT, int LDVT);
int PLASMA_dgesdd(PLASMA_enum jobu, PLASMA_enum jobvt, int M, int N, double *A, int LDA, double *S, PLASMA_desc *descT, double *U, int LDU, double *VT, int LDVT);
int PLASMA_dgetrf(  int M, int N, double *A, int LDA, int *IPIV);
int PLASMA_dgetrf_incpiv(int M, int N, double *A, int LDA, PLASMA_desc *descL, int *IPIV);
int PLASMA_dgetrf_nopiv( int M, int N, double *A, int LDA);
int PLASMA_dgetrf_tntpiv(int M, int N, double *A, int LDA, int *IPIV);
int PLASMA_dgetri(int N, double *A, int LDA, int *IPIV);
int PLASMA_dgetrs(PLASMA_enum trans, int N, int NRHS, double *A, int LDA, const int *IPIV, double *B, int LDB);
int PLASMA_dgetrs_incpiv(PLASMA_enum trans, int N, int NRHS, double *A, int LDA, PLASMA_desc *descL, const int *IPIV, double *B, int LDB);
int PLASMA_dsyev(PLASMA_enum jobz, PLASMA_enum uplo, int N, double *A, int LDA, double *W, PLASMA_desc *descT, double *Q, int LDQ);
int PLASMA_dsyevd(PLASMA_enum jobz, PLASMA_enum uplo, int N, double *A, int LDA, double *W, PLASMA_desc *descT, double *Q, int LDQ);
int PLASMA_dsyevr(PLASMA_enum jobz, PLASMA_enum range, PLASMA_enum uplo, int N, double *A, int LDA, double vl, double vu, int il, int iu, double abstol, int *nbcomputedeig, double *W, PLASMA_desc *descT, double *Q, int LDQ);
int PLASMA_dsygv(PLASMA_enum itype, PLASMA_enum jobz, PLASMA_enum uplo, int N, double *A, int LDA, double *B, int LDB, double *W, PLASMA_desc *descT, double *Q, int LDQ);
int PLASMA_dsygst(PLASMA_enum itype, PLASMA_enum uplo, int N, double *A, int LDA, double *B, int LDB);
int PLASMA_dgetmi(int m, int n, double *A, PLASMA_enum fin, int mb, int nb);
int PLASMA_dgetmi_Async(int m, int n, double *A, PLASMA_enum f_in, int mb, int inb, PLASMA_sequence *sequence, PLASMA_request *request);